z-index fixed

--- a/src/routes/navbar/Navlinksstyle.css
+++ b/src/routes/navbar/Navlinksstyle.css
@@ -1,6 +1,6 @@
 nav {
   position: fixed;
-  z-index: 99;
+  z-index: 999;
   width: 100%;
   background: #31659a;
   background-size: 400% 400%;
